--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,25 @@
 spring.application.name=sampleGnec_1
 
-#h2 database
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+##h2 database
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#
+##h2 database
+#spring.datasource.url=jdbc:h2:mem:test1
+#spring.jpa.show-sql=true
+#spring.jsp.properties.hibernate.format_sql=true
 
-#h2 database
-spring.datasource.url=jdbc:h2:mem:test1
+
+# PostgreSQL configuration
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA
 spring.jpa.show-sql=true
-spring.jsp.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
+spring.jpa.properties.hibernate.format_sql=true
 spring,jpa.hibernate.ddl.auto=create-drop
 
 # === OAuth2 Login Settings for Google ===
@@ -15,3 +27,7 @@ spring.security.oauth2.client.registration.google.client-id=
 spring.security.oauth2.client.registration.google.client-secret=
 spring.security.oauth2.client.registration.google.scope=profile,email
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
+#file size
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
