--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,24 +10,25 @@ spring.application.name=sampleGnec_1
 #spring.jsp.properties.hibernate.format_sql=true
 
 
-# PostgreSQL configuration
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://postgres:5432/sampledb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA
+# JPA Configuration
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
-spring,jpa.hibernate.ddl.auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# === OAuth2 Login Settings for Google ===
+# OAuth2 Login Settings for Google
 spring.security.oauth2.client.registration.google.client-id=332728791108-7qtmo8e5hi1d4tk2bt1p85ncsj3mdtvq.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 
-#file size
+# File Upload Configuration
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
